# WorkSend

./: .eslintrc.js  .gitignore  README.md  package.json  pyproject.toml  sendInvoice.ts  tsconfig.json
assets/html/: invoice_email.html
src/: app.ts  sendInvoice.ts  server.ts
src/config/: default.ts  index.ts
src/controllers/: emailController.ts  invoiceController.ts
src/models/: invoice.ts
src/routes/: index.ts
src/scripts/: sendInvoice.ts
src/services/: backupService.ts  emailService.ts  jiraService.ts  storageService.ts
src/templates/: invoiceTemplate.html
src/utils/: apiClient.ts  logger.ts  templateRenderer.ts
tests/services/: emailService.test.ts
