[tool.poetry]
name = "worksend"
version = "0.1.0"
description = "A quick automation tool for my invoices"
authors = ["PetrCala <cala.p@seznam.cz>"]
license = "GPL-3.0 license"
readme = "README.md"
package-mode = false
packages = [{ include = "worksend", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
